--- a/src/ForkFinder/Views/Especialidades/Index.cshtml
+++ b/src/ForkFinder/Views/Especialidades/Index.cshtml
@@ -4,23 +4,29 @@
     ViewData["Title"] = "Index";
 }
 
-<div class="my-2 p-2">
-    <h4 class="text-center">
-        Plataforma de reserva de mesa em restaurantes.<br />
-        Busque por especialidade, disponibilidade, acessibilidade ou avaliação de outros clientes.
-    </h4>
-</div>
+<div class="container-fluid">
+    <div class="row">
+        <div class="col-12">
+            <div class="my-2 p-2">
+                <h4 class="text-center">
+                    Plataforma de reserva de mesa em restaurantes.<br />
+                    Busque por especialidade, disponibilidade, acessibilidade ou avaliação de outros clientes.
+                </h4>
+            </div>
+        </div>
+    </div>
 
-<div class="mainEspecialidades container text-center my-2">
-    <div class="row row-cols-4 m-auto">
+    <div class="row justify-content-center">
         @foreach (var item in Model)
         {
-            <a class="categorias col" asp-controller="Especialidades" asp-action="Look" asp-route-id="@item.Id">
-                <img class="img-fluid" id="especialidadeimg" src="@Html.DisplayFor(modelItem => item.ImagemUpload)" />
-                <div id="especialidade" class="text-warning">
-                    <p>Comida @Html.DisplayFor(modelItem => item.NomeEspecialidade)</p>
-                </div>
-            </a>
+            <div class="col-md-3 col-sm-6">
+                <a class="categorias col card text-center mb-4" asp-controller="Especialidades" asp-action="Look" asp-route-id="@item.Id">
+                    <img class="card-img-top" src="@Html.DisplayFor(modelItem => item.ImagemUpload)" alt="Imagem da Especialidade">
+                    <div class="card-body">
+                        <p class="card-text">Comida @Html.DisplayFor(modelItem => item.NomeEspecialidade)</p>
+                    </div>
+                </a>
+            </div>
         }
     </div>
 </div>
