--- a/src/ForkFinder/Views/Shared/_Layout.cshtml
+++ b/src/ForkFinder/Views/Shared/_Layout.cshtml
@@ -9,6 +9,7 @@
     <link rel="stylesheet" href="/css/site.css" />
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ" crossorigin="anonymous">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.3.0/font/bootstrap-icons.css">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@48,400,0,0" />
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css" />
     
@@ -41,27 +42,9 @@
                                 <a class="nav-link text-warning" asp-area="" asp-controller="Mesas" asp-action="Index">Mesas</a>
                             </li>
                         }
-                       @* <li class="nav-item">
-                            <a class="nav-link text-warning" asp-area="" asp-controller="Home" asp-action="Index">Home</a>
-                        </li>*@
-                       @* @if (User.Identity.IsAuthenticated)
-                        {
-                        @if (User.IsInRole("Admin"))
-                        {
-                            @if (User.IsInRole("Restaurante"))
-                            {*@
-                                @*<li class="nav-item">
-                                    <a class="nav-link text-warning" asp-area="" asp-controller="Clientes" asp-action="Index">Clientes Temp</a>
-                        </li>*@
-                                <li class="nav-item">
+                        <li class="nav-item">
                             <a class="nav-link text-warning" asp-area="" asp-controller="Restaurantes" asp-action="Index">Restaurantes</a>
                                 </li>
-                          @*  }*@
-                            @*<li class="nav-item">
-                                <a class="nav-link text-warning" asp-area="" asp-controller="Produtos" asp-action="Index">Cardápio</a>
-                            </li>*@
-                       @* }*@
-                        
 
                         <li class="nav-item">
                             <a class="nav-link text-warning" asp-area="" asp-controller="Especialidades" asp-action="Index">Especialidades</a>
