--- a/src/ForkFinder/wwwroot/css/site.css
+++ b/src/ForkFinder/wwwroot/css/site.css
@@ -85,11 +85,10 @@ h1 {
     transition: all .8s;
 }
 
-.categorias:hover img {
+.categorias:hover {
     transform: scale(1.02);
     cursor: pointer;
     border: solid 4px #F6D136;
-    opacity: .3
 }
 
 #especialidade {
@@ -98,7 +97,6 @@ h1 {
     font-size: 35px;
     top: -170px;
     display: block;
-    opacity: 0;
     -webkit-transition: all 300ms ease;
     -moz-transition: all 300ms ease;
     -o-transition: all 300ms ease;
@@ -126,7 +124,12 @@ img .mascote {
 .restauranteFoto {
     width: 300px;
 }
-
+.categorias {
+    -webkit-transition: all 300ms ease;
+    -moz-transition: all 300ms ease;
+    -o-transition: all 300ms ease;
+    transition: all 300ms ease;
+}
 .restauranteFotoA {
     -webkit-transition: all 300ms ease;
     -moz-transition: all 300ms ease;
